examples/test/testpolicy4015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4015
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key41: value39
      key22: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value27
          key9: value2
      podSelector:
        matchLabels:
          key44: value38
          key18: value22
